--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
-version: "28.1"
 services:
   randomizer:
     container_name: randomizer-backend
     build:
-      context: .
-      dockerfile: backend/Dockerfile
+      context: backend
+      dockerfile: DockerfileLocal
     image:
       bdettmer/token-randomizer:latest
     ports:
       - "5003:5000"
-    restart: always
