--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Randomizer Backend
 
 on:
   push:
-    branches: main
+    branches: [main]
 
   workflow_dispatch:
 
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
+      - name: Set up Docker Build
         uses: docker/setup-buildx-action@v3
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -25,7 +25,7 @@ jobs:
         with:
           context: "{{defaultContext}}:backend"
           push: true
-          tags: bdettmer/token-randomizer:latest
+          tags: ${{ vars.DOCKERHUB_IMAGE }}
           platforms: linux/amd64
       - name: Deploy image
         uses: appleboy/ssh-action@v1
@@ -35,7 +35,8 @@ jobs:
           key: ${{ secrets.SERVER_KEY }}
           port: ${{ vars.SERVER_PORT }}
           script: |
-            sudo docker pull bdettmer/token-randomizer:latest
+            sudo docker pull ${{ vars.DOCKERHUB_IMAGE }}
             sudo docker stop randomizer-backend
             sudo docker rm randomizer-backend
-            sudo docker run -d --restart on-failure --name=randomizer-backend -p 5003:5000 bdettmer/token-randomizer:latest
+            docker image prune -a --force
+            sudo docker run -d --restart on-failure --name=randomizer-backend --platform linux/amd64 -p 5003:3000 ${{ vars.DOCKERHUB_IMAGE }}
