small changes to naming, only deploy frontend + backend when respective files change, deployment fix

--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -1,8 +1,10 @@
-name: Deploy Randomizer Backend
+name: Deploy Backend
 
 on:
   push:
     branches: [main]
+    paths:
+      - 'backend/**'
 
   workflow_dispatch:
 
