--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -31,6 +31,7 @@ pillow==11.2.1
 platformdirs==4.3.7
 pooch==1.8.2
 protobuf==6.30.2
+psutil==7.0.0
 PyMatting==1.1.13
 python-dotenv==1.1.0
 referencing==0.36.2
