add mouted debug directory for backend to show image with background removed, improve UI of frontend and show bounding boxes for all tokens

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,7 @@ services:
       dockerfile: DockerfileLocal
     image:
       bdettmer/token-randomizer:latest
+    volumes:
+      - ./debug:/token-randomizer/backend/out_bg
     ports:
       - "5003:5000"
